syntax = "proto3";

option go_package = "./pb";

package example;

// 玩家基础信息
message BaseInfo {
  int32 gender = 1; // 性别
  int32 level = 2; // 等级
  int32 exp = 3; // 经验值
  string LongFieldNameTest = 4;
}

// 任务模块数据
message QuestSaveData {
  repeated int32 finished = 1; // 已完成的任务
  map<int32,bytes> quests = 2; // 进行中的任务
}

// 任务数据
message QuestData {
  int32 cfgId = 1; // 配置id
  int32 progress = 2; // 进度
}

// 背包模块数据
message BagSaveData {
  map<int32,int32> countItem = 1;
  map<int64,bytes> uniqueItem = 2;
  repeated bytes testUniqueItem = 3;
}

// 可数的普通物品(可叠加的)
message CountItem {
  int32 cfgId = 1; // 物品配置id
  int32 count = 2; // 物品数量
}

// 不可叠加的物品
message UniqueItem {
  int64 uniqueId = 1; // 唯一id
  int32 cfgId = 2; // 物品配置id
}

// 玩家在mongo中的保存格式
// 用于一次性把玩家数据加载进来
message PlayerData {
  int64 _id = 1; // 玩家id
  string name = 2; // 玩家名
  int64 accountId = 3; // 账号id
  int32 regionId = 4; // 区服id
  BaseInfo baseInfo = 5;
  QuestSaveData quest = 6;
  map<string,bytes> interfaceMap = 7; // 动态数据
  repeated int32 array = 8;
  repeated bytes slice = 9;
  bytes struct = 10;
  bool isGM = 11;
  BagSaveData bag = 12;
}
